After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788309 - Various translation related fixes
Various translation related fixes
Status: RESOLVED FIXED
Product: gnome-nettool
Classification: Applications
Component: general
unspecified
Other Linux
: High critical
: ---
Assigned To: Germán Poo-Caamaño
Rodrigo Moya
Depends on:
Blocks:
 
 
Reported: 2017-09-28 19:55 UTC by Iñigo Martínez
Modified: 2017-10-03 19:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Migrate from Intltool to Gettext (12.37 KB, patch)
2017-09-28 20:01 UTC, Iñigo Martínez
committed Details | Review
Migrate from Intltool to Gettext (12.37 KB, patch)
2017-09-28 20:06 UTC, Iñigo Martínez
accepted-commit_now Details | Review
Fix missing translations (6.01 KB, patch)
2017-09-28 21:46 UTC, Iñigo Martínez
committed Details | Review
Fix gschema file remove (1.06 KB, patch)
2017-09-29 19:40 UTC, Iñigo Martínez
committed Details | Review

Description Iñigo Martínez 2017-09-28 19:55:43 UTC
Recent versions of Gettext are able to translate several formats that are used in GNOME applications, so there is really no need anymore to use intltool or GLib’s dated gettext glue.
Comment 1 Iñigo Martínez 2017-09-28 20:01:47 UTC
Created attachment 360631 [details] [review]
Migrate from Intltool to Gettext

This patch migrates from Intltool to Gettext in autotools and modifies meson to use the same files.
Comment 2 Iñigo Martínez 2017-09-28 20:06:32 UTC
Created attachment 360634 [details] [review]
Migrate from Intltool to Gettext

This patch migrates from Intltool to Gettext in autotools and modifies meson to use the same files.
Comment 3 Iñigo Martínez 2017-09-28 20:07:26 UTC
Comment on attachment 360634 [details] [review]
Migrate from Intltool to Gettext

Due to problems in bugzilla, I've uploaded the patch twice.
Comment 4 Germán Poo-Caamaño 2017-09-28 20:16:22 UTC
Review of attachment 360634 [details] [review]:

Please, go ahead and commit it.
Comment 5 Iñigo Martínez 2017-09-28 21:46:10 UTC
Created attachment 360640 [details] [review]
Fix missing translations

Gettext support in autotools does define ENABLE_NLS macro to 1 in the autoconf generated configuration file. Due to the migration to the meson build system, this define is missing.

There is no reason to really disable i18n, so this patch removes the condition that binds the text domain.

I've tried with both autotools and meson and translations are working now. Some pictures: https://imgur.com/a/FiDUc
Comment 6 Iñigo Martínez 2017-09-28 21:50:12 UTC
Comment on attachment 360631 [details] [review]
Migrate from Intltool to Gettext

Pushed as f247157 - build: Migrate from Intltool to Gettext
Comment 7 Iñigo Martínez 2017-09-28 21:52:08 UTC
Comment on attachment 360640 [details] [review]
Fix missing translations

Pushed 4ec58db - build: Fix missing translations
Comment 8 Iñigo Martínez 2017-09-29 19:40:47 UTC
Created attachment 360681 [details] [review]
Fix gschema file remove

I have been reviewing the gnome-nettool patches and I've noticed a bug that was introduced in autotools, because it removes the `gschema` file, when actually it shouldn't.

This patch fixes this problem.
Comment 9 Germán Poo-Caamaño 2017-10-03 19:01:57 UTC
Review of attachment 360681 [details] [review]:

Pushed. Thank you!
Comment 10 Germán Poo-Caamaño 2017-10-03 19:02:36 UTC
I believe this is all what we need.